--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,5 @@ project(start_stop_daemon C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(start_stop_daemon
-        start-stop-daemon.c
-        start-stop-daemon.dpkg.c)
+add_executable(start_stop_daemon start-stop-daemon.c)
+add_executable(start-stop-daemon.dpkg start-stop-daemon.dpkg.c)
